src/FrontEnd/MixERP.Net.FrontEnd/db/beta-1/v2/readme.md
#Important

Do not edit any files inside this directory or sub-directories.

#rebundle-db-with-sample.bat

This batch file will rebundle database scripts with sample data. 
As a result, the file **mixerp-incremental-sample.sql** will be created or replaced.


#rebundle-db-without-sample.bat

This batch file will rebundle database scripts without sample data. 
As a result, the files **mixerp-incremental-blank-db.sql** and **mixerp-patch-for-v1.sql** will be created or replaced.


#rebundle-and-rerun-with-sample.bat

This batch file expects database **mixerp** to be present before you execute it. It performs the following tasks:

* calls **rebundle-db-with-sample.bat**
* runs **mixerp-incremental-sample.sql** on **mixerp** database.

Before running this batch file, please make sure that you have PostgreSQL 9.4 installed.

#rebundle-and-rerun-without-sample.bat

This batch file expects database **mixerp** to be present before you execute it. It performs the following tasks:

* calls **rebundle-db-without-sample.bat**
* runs **mixerp-incremental-blank-db.sql** on **mixerp** database.

Before running this batch file, please make sure that you have PostgreSQL 9.4 installed.


#rebundle-and-rerun-with-sample-with-vacuum-analyze.bat

This batch file expects database **mixerp** to be present before you execute it. It performs the following tasks:

* calls **rebundle-db-with-sample.bat**
* runs **mixerp-incremental-sample.sql** on **mixerp** database.
* runs a full **VACUUM FULL ANALYZE** command on **mixerp** database.

Before running this batch file, please make sure that you have PostgreSQL 9.4 installed.


#rebundle-and-rerun-without-sample-with-vacuum-analyze.bat

This batch file expects database **mixerp** to be present before you execute it. It performs the following tasks:

* calls **rebundle-db-without-sample.bat**
* runs **mixerp-incremental-blank-db.sql** on **mixerp** database.
* runs a full **VACUUM FULL ANALYZE** command on **mixerp** database.

Before running this batch file, please make sure that you have PostgreSQL 9.4 installed.

